[tool.poetry]
name = "mixcloud3"
version = "0.1.0"
description = ""
authors = ["Marcin Baryłka"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
